<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/userEmailEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:hint="email" />

    <EditText
        android:id="@+id/userPasswordEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:hint="password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign in" />

    <TextView
        android:id="@+id/errorTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:minHeight="40dp"
        android:textColor="@color/colorWhite"
        android:visibility="gone" />

</LinearLayout>
